// my_fridge_backend/my-fridge-service-article/proto/article.proto
syntax = "proto3";

option go_package = "github.com/realague/my_fridge_backend/my-fridge-service-article;my_fridge_service_article";

package article; 

service ArticleService {
  rpc CreateArticle(Article) returns (Response) {}

  rpc GetArticles(GetRequest) returns (Response) {}
}

message Article {
  string id = 1;
  string description = 2;
  int32 weight = 3;
  string vessel_id = 5;
}

message Response {
  bool created = 1;
  Article article = 2;

  repeated Article articles = 3;
}

message GetRequest {}